fix: compact card transition & modal overflow

--- a/src/assets/styles/defaults.scss
+++ b/src/assets/styles/defaults.scss
@@ -23,6 +23,12 @@
   }
 }
 
+.skeleton .skeleton {
+  &:before, &:after {
+    @apply hidden;
+  }
+}
+
 .skeleton-container {
   .skeleton-container {
     .lazy-loader, .loader {
